# text-fragment-url

./: CHANGELOG.md  Cargo.toml  README.md
stf_cli/: Cargo.toml
stf_cli/src/: main.rs
stf_cli/tests/: cli.rs
stf_core/: Cargo.toml
stf_core/src/: encode.rs  fragment.rs  lib.rs  url.rs
stf_core/tests/: integration.rs
