[workspace]
resolver = "3"
members = [ "stf_cli", "stf_core" ]

[workspace.package]
version = "0.2.0"
description = "Produce a URL that links directly to specific text in a web page."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/Dark-Loon/scroll-to-text-fragments"
keywords = [ "deeplink", "text-fragment", "url", "highlight", "permalink" ]
categories = [ "command-line-utilities", "encoding" ]

[workspace.dependencies]
stf-core = { version = "0.2.0", path = "stf_core" }
thiserror = "2"
url = "2.5"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true
