[package]
name = "stf_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
stf_core = { path = "../stf_core" }
clap = { version = "4.5", features = ["derive"] }
clap_complete_nushell = "4.6.0"
clap_complete = "4.6.5"
thiserror = "2"
inquire = "0.9.4"
url = "2.5"
anstream = "1.0.0"
owo-colors = "4.3.0"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
wait-timeout = "0.2.1"

[[bin]]
name = "stf"
path = "src/main.rs"
