[package]
name = "stf-cli"
version.workspace = true
edition = "2024"
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
stf-core = { workspace = true  }
clap = { version = "4.5", features = [ "derive" ] }
clap_complete_nushell = "4.6.0"
clap_complete = "4.6.5"
inquire = "0.9.4"
anstream = "1.0.0"
owo-colors = "4.3.0"
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
wait-timeout = "0.2.1"

[[bin]]
name = "stf"
path = "src/main.rs"
