[package]
name = "stf-core"
version.workspace = true
edition = "2024"
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories = [ "encoding", "web-programming" ]

[dependencies]
urlencoding = "2"
unicode-segmentation = "1.13.3"
thiserror.workspace = true
url.workspace = true
